fix alignment for 1024px width

--- a/src/scss/navbar.scss
+++ b/src/scss/navbar.scss
@@ -74,7 +74,11 @@ div.mobile-menu {
         }
     }
 }
-
+@media (min-width: 1023px) and (max-width: 1024px) {
+    .top-links {
+        margin-left: 25%;
+    }
+}
 @media (max-width: 425px) {
     header {
         width: 100%;
